another changes for both markup.html and external.html files (adding internal and external links and images)

--- a/external.html
+++ b/external.html
@@ -1,1 +1,2 @@
 <p>I hope this external link is working :)</p>
+<p>now you can go back to the <a href="/html_markup/markups.html">original file</a></p>
