--- a/markups.html
+++ b/markups.html
@@ -23,15 +23,21 @@
 <!--  external links for couple of great movies -->
 <p>Here's a couple of awesome movies trailers</p>
 <p>
-<a href="https://www.youtube.com/watch?v=2iQuhsmtfHw">Looper Trailer</a>
+<a href="https://www.youtube.com/watch?v=2iQuhsmtfHw">Looper - Trailer</a>
 </p>
 <p>
-<a href="https://www.youtube.com/watch?v=ZKPFC8DA9_8">Brasil Trailer</a>
+<a href="https://www.youtube.com/watch?v=ZKPFC8DA9_8">Brazil - Trailer</a>
 </p>
 <!-- internal link -->
 <p>An internal link to a
-    <a href="/">README file</a>
+    <a href="/html_markup/external.html">external file</a>
 </p>
+
+<p>Looper - image from a local folder</p>
+<img src="/html_markup/images/looper-2012.jpeg" alt="Looper (2012)" width="194px" height="288px">
+
+<p>A Brasil's (not the film) landscape from a link</p>
+<img src="https://images.unsplash.com/photo-1483729558449-99ef09a8c325?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Brazil" width="200px" height="200px">
 
 </body>
     </html>
