markup.html updated with examples of 5 tags

--- a/markups.html
+++ b/markups.html
@@ -1,43 +1,66 @@
 <!DOCTYPE html>
 <html>
-    <head>
+  <head> </head>
+  <body>
+    <h1>Hello h1 ver.</h1>
+    <h2>Hello h2 ver.</h2>
+    <h3>Hello h3 ver.</h3>
+    <h4>Hello h4 ver.</h4>
 
-    </head>
-    <body>
-        
-    
-<h1>Hello h1 ver.</h1>
-<h2>Hello h2 ver.</h2>
-<h3>Hello h3 ver.</h3>
-<h4>Hello h4 ver.</h4>
+    <!-- <p>hello paragraph of Lorem50</p> -->
+    <p>
+      <b>Lorem ipsum</b> dolor sit amet
+      <i>consectetur adipisicing elit.</i> Natus earum omnis ducimus,
+      <b>libero non incidunt</b> hic aperiam quisquam ipsa vero repellat?
+      Perferendis voluptate consequatur animi error veritatis facere natus
+      adipisci! Iure cupiditate corporis animi illo et culpa nam reiciendis
+      blanditiis odit! Veniam blanditiis tenetur consectetur aut? Incidunt dolor
+      iure atque.
+    </p>
 
-<!-- <p>hello paragraph of Lorem50</p> -->
-<p><b>Lorem ipsum</b> dolor sit amet <i>consectetur adipisicing elit.</i> 
-    Natus earum omnis ducimus, <b>libero non incidunt</b> hic aperiam 
-    quisquam ipsa vero repellat? Perferendis voluptate 
-    consequatur animi error veritatis facere natus adipisci! 
-    Iure cupiditate corporis animi illo et culpa nam reiciendis 
-    blanditiis odit! Veniam blanditiis tenetur consectetur aut? 
-    Incidunt dolor iure atque.</p>
+    <!--  external links for couple of great movies -->
+    <p>Here's a couple of awesome movies trailers</p>
+    <p>
+      <a href="https://www.youtube.com/watch?v=2iQuhsmtfHw">Looper - Trailer</a>
+    </p>
+    <p>
+      <a href="https://www.youtube.com/watch?v=ZKPFC8DA9_8">Brazil - Trailer</a>
+    </p>
+    <!-- internal link -->
+    <p>
+      An internal link to a
+      <a href="/html_markup/external.html">external file</a>
+    </p>
 
-<!--  external links for couple of great movies -->
-<p>Here's a couple of awesome movies trailers</p>
-<p>
-<a href="https://www.youtube.com/watch?v=2iQuhsmtfHw">Looper - Trailer</a>
-</p>
-<p>
-<a href="https://www.youtube.com/watch?v=ZKPFC8DA9_8">Brazil - Trailer</a>
-</p>
-<!-- internal link -->
-<p>An internal link to a
-    <a href="/html_markup/external.html">external file</a>
-</p>
+    <p>Looper - image from a local folder</p>
+    <img
+      src="/html_markup/images/looper-2012.jpeg"
+      alt="Looper (2012)"
+      width="194px"
+      height="288px"
+    />
 
-<p>Looper - image from a local folder</p>
-<img src="/html_markup/images/looper-2012.jpeg" alt="Looper (2012)" width="194px" height="288px">
+    <p>A Brasil's (not the film) landscape from a link</p>
+    <img
+      src="https://images.unsplash.com/photo-1483729558449-99ef09a8c325?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+      alt="Brazil"
+      width="200px"
+      height="200px"
+    />
 
-<p>A Brasil's (not the film) landscape from a link</p>
-<img src="https://images.unsplash.com/photo-1483729558449-99ef09a8c325?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Brazil" width="200px" height="200px">
+    <h2>And here's a some other cool tags:</h2>
 
-</body>
-    </html>
+    <!-- other unlearned (yet) tags --> 
+    <p>'abbr' tag is an opportunity to mention how awesome'<abbr title="Sergeant">Sgt.</abbr> Pepper's Lonely Hearts Club' is.</p> 
+
+    <p>The <mark>mark</mark> tag is to highlight a text</p>
+
+    <p>'progress' tag is for showing a process bar</p>
+    <progress value="750" max="1000">
+        <span>70</span>%
+      </progress>
+
+      <p>the 'cite' tag if for <cite>Exactly this</cite> and that's it, while the 'q' tag is <q>for quotes</q></p> 
+
+  </body>
+</html>
